--- a/components/QuShe-inputs/inputs.css
+++ b/components/QuShe-inputs/inputs.css
@@ -293,6 +293,17 @@ button::after {
 	transform: translate(50%, -50%);
 }
 
+.picsCheck {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	height: 40rpx;
+	width: 40rpx;
+	border-radius: 50%;
+	transition: background-color .3s;
+	font-size: 22rpx;
+}
+
 .box_shadow_2px_2px_5px_ADADAD {
 	box-shadow: 2px 2px 5px #ADADAD;
 }
